crates/pgls_tokenizer/src/snapshots/pgt_tokenizer__tests__block_comment.snap
---
source: crates/pgt_tokenizer/src/lib.rs
expression: result
snapshot_kind: text
---
[
    "\n" @ LineEnding { count: 1 },
    "/*\n * foo\n * bar\n*/" @ BlockComment { terminated: true },
]
