crates/pgls_tokenizer/src/snapshots/pgt_tokenizer__tests__named_param_colon_raw_vs_cast.snap
---
source: crates/pgt_tokenizer/src/lib.rs
expression: result
snapshot_kind: text
---
[
    "select" @ Ident,
    " " @ Space,
    "1" @ Literal { kind: Int { base: Decimal, empty_int: false } },
    " " @ Space,
    "from" @ Ident,
    " " @ Space,
    "c" @ Ident,
    " " @ Space,
    "where" @ Ident,
    " " @ Space,
    "id" @ Ident,
    "::" @ DoubleColon,
    "test" @ Ident,
    " " @ Space,
    "=" @ Eq,
    " " @ Space,
    ":id" @ NamedParam { kind: ColonRaw },
    ";" @ Semi,
]
